--- a/estilos.css
+++ b/estilos.css
@@ -7,9 +7,33 @@ body {
     margin: 15px;
     padding: 0;
 }
+
+#cabecera{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container {
     width: 70%;
     padding: 1em;
     text-align: center;
     border: 1px solid #DDD;
+}
+
+#container h1 {
+    font-size: 20px;
+}
+
+#post{
+    padding: 1em;
 }
