--- a/estilos.css
+++ b/estilos.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     color: #333;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
     margin: 15px;
     padding: 0;
